Fix #17. Add example of using the rule as part of a Suite of tests that all use the same container. Updated to clean up dangling Volumes for all of Integration tests for the Rule.